# affinity-bot

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  shuttle_setup_container.sh
entity/: Cargo.toml
entity/src/: mod.rs  notification_preferences.rs  prelude.rs  price_history.rs  products.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250114_103109_price_history.rs  m20250114_103705_notification_preferences.rs
src/: main.rs
src/commands/: mod.rs  moderate.rs  serverstats.rs  vote.rs  welcome_message.rs
src/commands/cargocut/: mod.rs  model.rs  shorten.rs
src/commands/scrape/: mod.rs  myntra.rs
src/commands/youtube/: mod.rs  yt_dlp.rs
src/config/: email.rs
src/cron/: notifications.rs
src/events/: mod.rs  onboarding_role.rs  self_role_assign.rs
src/moderation/: mod.rs  punishments.rs  spam.rs  violations.rs
src/scraper/: mod.rs  myntra.rs  price_scraper.rs
src/utils/: mod.rs  util.rs
src/utils/emails/: mod.rs  notify_price.rs
src/utils/emails/hbs/: price_history.hbs
