[package]
name = "affinity-bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".","migration","entity"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
anyhow = "1.0.66"
lettre = { version = "0.11.11", features = ["tokio1-native-tls"] }
sea-orm = {version = "1.1.4",features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ]}
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = "0.12.12"
headless_chrome = "1.0.15"
rand = "0.8.5"
scraper = "0.22.0"
